// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmConnectedNetwork has a connecting state 1`] = `
<div
  class="sidebar-bottom"
>
  <tmbtn-stub
    class="intercom-button"
    id="intercom-button"
    size="small"
    type="secondary"
    value="Help / Feedback"
  />
   
  <div
    class="tm-connected-network"
    id="tm-connected-network"
  >
    <div
      class="tm-connected-network__connection"
    >
      <div
        class="tm-connected-network__icon"
        id="tm-connected-network__icon"
      >
        <span
          class="tm-connected-network__status green"
        />
      </div>
       
      <div
        class="tm-connected-network__string"
        id="tm-connected-network__string"
      >
        <span
          class="chain-id"
        >
          
          
        
        </span>
      </div>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__block"
    >
      
        --
      
    </div>
  </div>
</div>
`;

exports[`TmConnectedNetwork has the expected html structure when connected 1`] = `
<div
  class="sidebar-bottom"
>
  <tmbtn-stub
    class="intercom-button"
    id="intercom-button"
    size="small"
    type="secondary"
    value="Help / Feedback"
  />
   
  <div
    class="tm-connected-network"
    id="tm-connected-network"
  >
    <div
      class="tm-connected-network__connection"
    >
      <div
        class="tm-connected-network__icon"
        id="tm-connected-network__icon"
      >
        <span
          class="tm-connected-network__status green"
        />
      </div>
       
      <div
        class="tm-connected-network__string"
        id="tm-connected-network__string"
      >
        <span
          class="chain-id"
        >
          
          gaia-20k
        
        </span>
      </div>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__block"
    >
      <span>
        <router-link-stub
          to="[object Object]"
        >
          
          #6,001
        
        </router-link-stub>
      </span>
    </div>
  </div>
</div>
`;
